@@ -66,7 +66,7 @@ public class RedisMessageSubcriberFactory implements MessageSubcriberFactory {
                     }
                 }
             });
-            thread.setName("Scanner_" + channel + thread.getId());
+            thread.setName("Scanner_" + channel + thread.threadId());
             thread.setDaemon(true);
             thread.start();
         }
